--- a/05Blog-Express/package.json
+++ b/05Blog-Express/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
