--- a/06EmailSender/package.json
+++ b/06EmailSender/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   },
   "name": "06emailsender",
   "version": "1.0.0",
   "main": "emailSender.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
