--- a/08LogingForm/package.json
+++ b/08LogingForm/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "lucide-react": "^0.408.0",
+    "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
