--- a/08LogingForm/backend/package.json
+++ b/08LogingForm/backend/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cros": "^1.0.1",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
