--- a/08LogingForm/backend/package.json
+++ b/08LogingForm/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cros": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
