--- a/10authenticationAuthorization/package.json
+++ b/10authenticationAuthorization/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
 }
