--- a/10authenticationAuthorization/package.json
+++ b/10authenticationAuthorization/package.json
@@ -13,6 +13,7 @@
     "connect-flash": "^0.1.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
