--- a/11WebSockets/package.json
+++ b/11WebSockets/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
   }
